[gd_scene load_steps=5 format=3 uid="uid://brg6wsigq7nlo"]

[ext_resource type="Script" path="res://scripts/RetryScreen.gd" id="1_3inqi"]

[sub_resource type="Animation" id="Animation_5othh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RetryScreen/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3w865"]
resource_name = "fade_in"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RetryScreen/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.313726)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oiohd"]
_data = {
"RESET": SubResource("Animation_5othh"),
"fade_in": SubResource("Animation_3w865")
}

[node name="RetryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3inqi")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Button Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.5
offset_top = 150.0
offset_right = 142.5
offset_bottom = 212.0
grow_horizontal = 2

[node name="Retry" type="Button" parent="Button Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Retry"

[node name="Options" type="Button" parent="Button Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="MainMenu" type="Button" parent="Button Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="Quit" type="Button" parent="Button Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.5
offset_right = 109.5
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "You Suck"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_oiohd")
}

[connection signal="pressed" from="Button Container/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Button Container/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Button Container/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Button Container/Quit" to="." method="_on_quit_pressed"]
